ANTARCTICLE-193 "Find" button is not aligned to the search field Fixed css styles to support small screens

--- a/app/assets/stylesheets/styles.less
+++ b/app/assets/stylesheets/styles.less
@@ -206,9 +206,22 @@ pre, code {
  * ARTICLES
  ***********************************************/
 .tag-search{
+  div {
+    display:inline-block;
+  }
   input {
     margin-left: 70px;
     width: 200px;
+    display:inline-block;
+  }
+}
+
+@media (max-width: 400px){
+  .tag-search{
+    input {
+      margin-left: 0;
+      width: 150px;
+    }
   }
 }
 
